_includes/css/blog.css
.Blog {
  --color-primary: var(--blog-color-primary);
  --color-secondary: var(--blog-color-secondary);
}

/* +posts */
.Posts {
  margin-top: 2rem;
}

/* +post */
.Post-date {
  margin: 1.5rem 0 0;
}

.Post-content {
  padding: 1.75em 0 0;
}

.Post-footer {
  margin-top: var(--spacing);
}

